--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,7 +12,17 @@
     "bootstrap": "^5.0.1",
     "lodash": "^4.17.21"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reshmaparhar/gitvs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/reshmaparhar/gitvs/issues"
+  },
+  "homepage": "https://github.com/reshmaparhar/gitvs#readme",
   "description": ""
 }
